# Chess

./: CMakeLists.txt  boardsquare.cpp  boardsquare.h  chess_bot.py  chesspieceitem.cpp  chesspieceitem.h  gamewindow.cpp  gamewindow.h  loginwindow.cpp  loginwindow.h  loginwindows.ui  main.cpp  mainwindow.h  modeselectionwindow.cpp  modeselectionwindow.h
